cmake_minimum_required(VERSION 3.13)
project(simulator)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(code)
include_directories(code/Assignment2)
include_directories(code/data)
include_directories(code/GUILib)
include_directories(code/include)
include_directories(code/include/freetype)
include_directories(code/include/freetype/config)
include_directories(code/include/freetype/internal)
include_directories(code/include/freetype/internal/services)
include_directories(code/include/GLFW)
include_directories(code/MathLib)
include_directories(code/meshes)
include_directories(code/OptimizationLib)
include_directories(code/screenShots)
include_directories(code/Utils)
include_directories(libs)

add_executable(simulator
        code/Assignment2/Assignment2.filters
        code/Assignment2/Assignment2.user
        code/Assignment2/Assignment2.vcxproj
        code/Assignment2/Assignment2.vcxproj.filters
        code/Assignment2/CollisionPlane.cpp
        code/Assignment2/CollisionPlane.h
        code/Assignment2/Constants.h
        code/Assignment2/main.cpp
        code/Assignment2/Particle.h
        code/Assignment2/ParticleSystem.cpp
        code/Assignment2/ParticleSystem.h
        code/Assignment2/ParticleSystemLoader.cpp
        code/Assignment2/ParticleSystemLoader.h
        code/Assignment2/PBFApp.cpp
        code/Assignment2/PBFApp.h
        code/Assignment2/SpatialMap.cpp
        code/Assignment2/SpatialMap.h
        code/data/fonts/arial.ttf
        code/data/shaders/radialGradient/radialGradient.frag
        code/data/shaders/radialGradient/radialGradient.mat
        code/data/shaders/radialGradient/radialGradient.vert
        code/data/textures/ground_TileLight.bmp
        code/data/textures/ground_TileLight2.bmp
        code/GUILib/FreeType.cpp
        code/GUILib/FreeType.h
        code/GUILib/GLApplication.cpp
        code/GUILib/GLApplication.h
        code/GUILib/GLCamera.cpp
        code/GUILib/GLCamera.h
        code/GUILib/GLConsole.cpp
        code/GUILib/GLConsole.h
        code/GUILib/GLContentManager.cpp
        code/GUILib/GLContentManager.h
        code/GUILib/GLMesh.cpp
        code/GUILib/GLMesh.h
        code/GUILib/GlobalMouseState.cpp
        code/GUILib/GlobalMouseState.h
        code/GUILib/GLShader.cpp
        code/GUILib/GLShader.h
        code/GUILib/GLShaderMaterial.cpp
        code/GUILib/GLShaderMaterial.h
        code/GUILib/GLTexture.cpp
        code/GUILib/GLTexture.h
        code/GUILib/GLTrackingCamera.cpp
        code/GUILib/GLTrackingCamera.h
        code/GUILib/GLUtils.cpp
        code/GUILib/GLUtils.h
        code/GUILib/GLWindow.cpp
        code/GUILib/GLWindow.h
        code/GUILib/GLWindow2D.cpp
        code/GUILib/GLWindow2D.h
        code/GUILib/GLWindow3D.cpp
        code/GUILib/GLWindow3D.h
        code/GUILib/GLWindowContainer.cpp
        code/GUILib/GLWindowContainer.h
        code/GUILib/GUILib.vcxproj
        code/GUILib/GUILib.vcxproj.filters
        code/GUILib/InteractiveWidget.cpp
        code/GUILib/InteractiveWidget.h
        code/GUILib/OBJReader.cpp
        code/GUILib/OBJReader.h
        code/GUILib/RotateWidget.cpp
        code/GUILib/RotateWidget.h
        code/GUILib/RotateWidgetV1.cpp
        code/GUILib/RotateWidgetV1.h
        code/GUILib/RotateWidgetV2.cpp
        code/GUILib/RotateWidgetV2.h
        code/GUILib/TransformWidget.cpp
        code/GUILib/TransformWidget.h
        code/GUILib/TranslateWidget.cpp
        code/GUILib/TranslateWidget.h
        code/include/freetype/config/ftconfig.h
        code/include/freetype/config/ftheader.h
        code/include/freetype/config/ftmodule.h
        code/include/freetype/config/ftoption.h
        code/include/freetype/config/ftstdlib.h
        code/include/freetype/internal/services/svbdf.h
        code/include/freetype/internal/services/svcid.h
        code/include/freetype/internal/services/svfntfmt.h
        code/include/freetype/internal/services/svgldict.h
        code/include/freetype/internal/services/svgxval.h
        code/include/freetype/internal/services/svkern.h
        code/include/freetype/internal/services/svmetric.h
        code/include/freetype/internal/services/svmm.h
        code/include/freetype/internal/services/svotval.h
        code/include/freetype/internal/services/svpfr.h
        code/include/freetype/internal/services/svpostnm.h
        code/include/freetype/internal/services/svprop.h
        code/include/freetype/internal/services/svpscmap.h
        code/include/freetype/internal/services/svpsinfo.h
        code/include/freetype/internal/services/svsfnt.h
        code/include/freetype/internal/services/svttcmap.h
        code/include/freetype/internal/services/svtteng.h
        code/include/freetype/internal/services/svttglyf.h
        code/include/freetype/internal/services/svwinfnt.h
        code/include/freetype/internal/autohint.h
        code/include/freetype/internal/ftcalc.h
        code/include/freetype/internal/ftdebug.h
        code/include/freetype/internal/ftdriver.h
        code/include/freetype/internal/ftgloadr.h
        code/include/freetype/internal/fthash.h
        code/include/freetype/internal/ftmemory.h
        code/include/freetype/internal/ftobjs.h
        code/include/freetype/internal/ftpic.h
        code/include/freetype/internal/ftrfork.h
        code/include/freetype/internal/ftserv.h
        code/include/freetype/internal/ftstream.h
        code/include/freetype/internal/fttrace.h
        code/include/freetype/internal/ftvalid.h
        code/include/freetype/internal/internal.h
        code/include/freetype/internal/psaux.h
        code/include/freetype/internal/pshints.h
        code/include/freetype/internal/sfnt.h
        code/include/freetype/internal/t1types.h
        code/include/freetype/internal/tttypes.h
        code/include/freetype/freetype.h
        code/include/freetype/ftadvanc.h
        code/include/freetype/ftautoh.h
        code/include/freetype/ftbbox.h
        code/include/freetype/ftbdf.h
        code/include/freetype/ftbitmap.h
        code/include/freetype/ftbzip2.h
        code/include/freetype/ftcache.h
        code/include/freetype/ftcffdrv.h
        code/include/freetype/ftchapters.h
        code/include/freetype/ftcid.h
        code/include/freetype/fterrdef.h
        code/include/freetype/fterrors.h
        code/include/freetype/ftfntfmt.h
        code/include/freetype/ftgasp.h
        code/include/freetype/ftglyph.h
        code/include/freetype/ftgxval.h
        code/include/freetype/ftgzip.h
        code/include/freetype/ftimage.h
        code/include/freetype/ftincrem.h
        code/include/freetype/ftlcdfil.h
        code/include/freetype/ftlist.h
        code/include/freetype/ftlzw.h
        code/include/freetype/ftmac.h
        code/include/freetype/ftmm.h
        code/include/freetype/ftmodapi.h
        code/include/freetype/ftmoderr.h
        code/include/freetype/ftotval.h
        code/include/freetype/ftoutln.h
        code/include/freetype/ftpcfdrv.h
        code/include/freetype/ftpfr.h
        code/include/freetype/ftrender.h
        code/include/freetype/ftsizes.h
        code/include/freetype/ftsnames.h
        code/include/freetype/ftstroke.h
        code/include/freetype/ftsynth.h
        code/include/freetype/ftsystem.h
        code/include/freetype/fttrigon.h
        code/include/freetype/ftttdrv.h
        code/include/freetype/fttypes.h
        code/include/freetype/ftwinfnt.h
        code/include/freetype/t1tables.h
        code/include/freetype/ttnameid.h
        code/include/freetype/tttables.h
        code/include/freetype/tttags.h
        code/include/freetype/ttunpat.h
        code/include/GLFW/glfw3.h
        code/include/GLFW/glfw3native.h
        code/include/AntTweakBar.h
        code/include/fbxsdk.h
        code/include/ft2build.h
        code/include/glew.h
        code/MathLib/MathLib.h
        code/MathLib/MathLib.vcxproj
        code/MathLib/MathLib.vcxproj.filters
        code/MathLib/Matrix.h
        code/MathLib/P3D.cpp
        code/MathLib/P3D.h
        code/MathLib/Plane.cpp
        code/MathLib/Plane.h
        code/MathLib/Quaternion.cpp
        code/MathLib/Quaternion.h
        code/MathLib/Ray.cpp
        code/MathLib/Ray.h
        code/MathLib/Segment.cpp
        code/MathLib/Segment.h
        code/MathLib/Sphere.h
        code/MathLib/Trajectory.h
        code/MathLib/V3D.cpp
        code/MathLib/V3D.h
        code/meshes/bunny200.obj
        code/meshes/bunny300.obj
        code/meshes/bunny450.obj
        code/meshes/bunny670.obj
        code/meshes/grid10.obj
        code/meshes/pendulum.mss
        code/meshes/sphere.obj
        code/meshes/triangle.mss
        code/OptimizationLib/BFGSFunctionMinimizer.cpp
        code/OptimizationLib/BFGSFunctionMinimizer.h
        code/OptimizationLib/BFGSHessianApproximator.cpp
        code/OptimizationLib/BFGSHessianApproximator.h
        code/OptimizationLib/GradientBasedFunctionMinimizer.cpp
        code/OptimizationLib/GradientBasedFunctionMinimizer.h
        code/OptimizationLib/GradientDescentFunctionMinimizer.cpp
        code/OptimizationLib/GradientDescentFunctionMinimizer.h
        code/OptimizationLib/GreedyRandomizedMinimizer.cpp
        code/OptimizationLib/GreedyRandomizedMinimizer.h
        code/OptimizationLib/NewtonFunctionMinimizer.cpp
        code/OptimizationLib/NewtonFunctionMinimizer.h
        code/OptimizationLib/NewtonFunctionMinimizer_test.old
        code/OptimizationLib/ObjectiveFunction.cpp
        code/OptimizationLib/ObjectiveFunction.h
        code/OptimizationLib/optimizationLib.vcxproj
        code/OptimizationLib/optimizationLib.vcxproj.filters
        code/OptimizationLib/SoftUnilateralConstraint.cpp
        code/OptimizationLib/SoftUnilateralConstraint.h
        code/screenShots/t.txt
        code/Utils/BMPIO.cpp
        code/Utils/BMPIO.h
        code/Utils/Image.cpp
        code/Utils/Image.h
        code/Utils/ImageIO.h
        code/Utils/Logger.cpp
        code/Utils/Logger.h
        code/Utils/Timer.cpp
        code/Utils/Timer.h
        code/Utils/Utils.cpp
        code/Utils/Utils.h
        code/Utils/Utils.vcxproj
        code/Utils/Utils.vcxproj.filters
        code/generate.sh
        code/generate_all.sh
        code/make_makefile.sh
        code/README.txt
        code/SCP.sln
        libs/glfw-3.1.1/debug/glfw3.lib
        libs/glfw-3.1.1/release/glfw3.lib
        libs/AntTweakBar.dll
        libs/AntTweakBar.lib
        libs/AntTweakBar64.dll
        libs/AntTweakBar64.lib
        libs/freetype255.lib
        libs/freetype255d.lib
        libs/glew32.dll
        libs/glew32.lib
        README.md)
